# socid-extractor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FIELDS.md  LICENSE  MANIFEST.in  METHODS.md  README.md  googl  pyproject.toml  pytest.ini  requirements.txt  revision.py  run.py  setup.cfg  setup.py  socid_extractor.py  test-requirements.txt  test_socid_extractor.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: python-package.yml  python-publish.yml  pythonapp.yml
docs/: README.md  architecture.md  modules.md  plugins.md  testing-and-ci.md
examples/: example_plugin.py
socid_extractor/: __init__.py  __main__.py  activation.py  cli.py  main.py  matching.py  plugins.py  postprocessor.py  schemes.py  socid_extractor.py  url_relevance.py  utils.py
socid_extractor/tests/: test_e2e.py
tests/: gitlab.test.cookies  reformat.sh  test_e2e.py  test_plugins.py  test_socid_improvements.py  test_url_relevance.py  yandex.test.cookies
